# pyUSPTO

./: .coverage  .flake8  .gitignore  .readthedocs.yaml  ADVANCED.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  PUBLISHING.md  PubPlan.md  README.md  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  results.txt  setup.py  test_install.py  tox.ini
.devcontainer/: devcontainer-lock.json  devcontainer.json
.github/ISSUE_TEMPLATE/: bug-report.md  bug-report.yml  documentation-updates.md  documentation-updates.yml  feature-request.md  feature-request.yml
.github/workflows/: codeql.yml  publish-docs.yaml  publish-to-test-pypi.yml  python-tests.yml
docs/source/: about.rst  advanced.rst  conf.py  configuration.rst  development.rst  index.rst  quickstart.rst
docs/source/api/: clients.rst  index.rst  models.rst
docs/source/examples/: enriched_citations.rst  index.rst  oa_actions.rst  (+3 more)
examples/: bulk_data_example.py  bulk_data_pagination_example.py  enriched_citations_example.py  error_handling_example.py  ifw_example.py  oa_actions_example.py  oa_citations_example.py  oa_rejections_example.py  patent_data_example.py  petition_decisions_example.py  ptab_appeals_example.py  ptab_interferences_example.py  ptab_trials_example.py
info/: USPTO ODP API Schema.yml
pyUSPTO/: .coverage  __init__.py  _version.py  base.py  config.py  exceptions.py
pyUSPTO/clients/: bulk_data.py  patent_data.py
pyUSPTO/models/: __init__.py  base.py  bulk_data.py  patent_data.py
pyUSPTO/tests/: __init__.py  conftest.py  test_base.py  test_base_client.py  test_bulk_data.py  test_edge_cases.py  test_exceptions.py  test_init.py  test_init_import.py  test_integration.py  test_models_to_dict.py  test_patent_data.py  test_setup.py
pyUSPTO/utils/: http.py
src/pyUSPTO/: __init__.py  base.py  config.py  exceptions.py  http_config.py  warnings.py
tests/: conftest.py  test_base.py  test_config.py  test_edge_cases.py  test_http_config.py  test_init.py  test_version.py
tests/clients/: test_base.py  test_bulk_data_clients.py  test_enriched_citation_clients.py  test_oa_actions_clients.py  test_oa_citations_clients.py  test_oa_rejections_clients.py  test_patent_data_clients.py  test_petition_decision_clients.py  test_petition_decisions_client.py  test_ptab_appeals_client.py  test_ptab_interferences_client.py  test_ptab_trials_client.py
tests/integration/: conftest.py  test_bulk_data_integration.py  test_enriched_citations_integration.py  test_oa_actions_integration.py  test_oa_citations_integration.py  test_oa_rejections_integration.py  test_patent_data_integration.py  test_petition_decisions_integration.py  test_ptab_appeals_integration.py  test_ptab_interferences_integration.py  test_ptab_trials_integration.py
tests/models/: test_bulk_data_models.py  test_enriched_citation_models.py  test_oa_actions_models.py  test_oa_citations_models.py  test_oa_rejections_models.py  test_patent_data_models.py  test_petition_decision_models.py  test_petition_decisions_models.py  test_ptab_models.py  test_utils.py
(+79 files in other folders)
