[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "pyUSPTO/_version.py"

[tool.mypy]
config_file = "mypy.ini"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
profile = "black"

[tool.pytest.ini_options]
testpaths = ["pyUSPTO/tests"]

[tool.coverage.run]
source = ["pyUSPTO"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    # Skip protocol definitions
    "class FromDictProtocol\\(Protocol\\):",
    "def from_dict\\(cls, data: Dict\\[str, Any\\]\\) -> Any:",
    "\\.\\.\\.",
    # Skip abstract methods 
    "@abstractmethod",
    # Skip defensive assertion code
    "raise NotImplementedError",
    # Skip type checking blocks
    "if TYPE_CHECKING:",
    "pass",
]
